@@ -19,7 +19,8 @@ Version 1.1
 
   * GLSL (#369)
   * Erlang shell
-  * (Ba)sh shell
+  * (Ba)sh shell (#349)
+  * Prolog (#373)
 
 
 Version 1.0
